# minimal

./: AUTHORS  ChangeLog  Makefile.am  configure.ac
src/: HelloWorld.cpp  Makefile.am
